[package]
name = "catconf"
version = "0.1.2"
edition = "2021"
authors = [ "Andrew Rioux <rioux.d.andrew@gmail.com>" ]
description = "Allows for reading from the executing binary in order to pull configuration"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
